force-app/main/default/objects/maps__AdvRouteWaypoint__c/maps__AdvRouteWaypoint__c.object-meta.xml
<CustomObject>
    <description>These are the different Advanced Route waypoints/stops for a route</description>
    <label>Maps Advanced Route Waypoint</label>
    <nameField>
        <label>Maps Advanced Route Waypoint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Waypoints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>