force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__AdvRoute__c.field-meta.xml
<CustomField>
    <fullName>maps__AdvRoute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This the route that the Advanced Route waypoint is associated to</description>
    <label>Maps Advanced Route</label>
    <referenceTo>maps__AdvRoute__c</referenceTo>
    <relationshipName>AdvRouteWaypoints</relationshipName>
    <type>Lookup</type>
</CustomField>