force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__AdvRouteDataSet__c.field-meta.xml
<CustomField>
    <fullName>maps__AdvRouteDataSet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advanced Route Data Set</label>
    <referenceTo>maps__AdvRouteDataSet__c</referenceTo>
    <relationshipLabel>Maps Advanced Route Waypoints</relationshipLabel>
    <relationshipName>AdvRouteWaypoints</relationshipName>
    <type>Lookup</type>
</CustomField>