force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__AssociatedOutputTypes__c.field-meta.xml
<CustomField>
    <fullName>maps__AssociatedOutputTypes__c</fullName>
    <label>Associated Output Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>