force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__BaseObjectAddressMisconfigured__c.field-meta.xml
<CustomField>
    <fullName>maps__BaseObjectAddressMisconfigured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is for when all the address fields on the base object we are looking for are not configured properly.</description>
    <label>Base Object Address Misconfigured</label>
    <type>Checkbox</type>
</CustomField>