force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__BaseObjectApi__c.field-meta.xml
<CustomField>
    <fullName>maps__BaseObjectApi__c</fullName>
    <description>This is the object api of the record routed</description>
    <formula>IF(maps__RoutedObjectId__c == null,
null,
IF(maps__AdvRouteDataSet__c != null,
maps__AdvRouteDataSet__r.maps__BaseObject__r.Name,
IF(maps__RelatedAdvRouteTemplate__c == null,
maps__AdvRoute__r.maps__AdvRouteTemplateUser__r.maps__AdvRouteTemplate__r.maps__TemplateObject__c,
maps__RelatedAdvRouteTemplate__r.maps__TemplateObject__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Object Api</label>
    <type>Text</type>
</CustomField>