force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__BaseObjectId__c.field-meta.xml
<CustomField>
    <fullName>maps__BaseObjectId__c</fullName>
    <description>This is the id of the core base object record the route is based off of</description>
    <formula>IF(maps__RoutedObjectId__c == null,
null,
IF(maps__AdvRouteDataSet__c != null,
maps__AdvRouteDataSet__r.maps__BaseObject__c,
IF(maps__RelatedAdvRouteTemplate__c == null,
maps__AdvRoute__r.maps__AdvRouteTemplateUser__r.maps__AdvRouteTemplate__r.maps__CoreBaseObjectId__c,
maps__RelatedAdvRouteTemplate__r.maps__CoreBaseObjectId__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Object Id</label>
    <type>Text</type>
</CustomField>