force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__CreatedForFutureVisit__c.field-meta.xml
<CustomField>
    <fullName>maps__CreatedForFutureVisit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to block off a time for a future scheduled visit that is created outside of Maps Advanced Route</description>
    <label>Created for Future Visit</label>
    <type>Checkbox</type>
</CustomField>