force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>maps__EndDateTime__c</fullName>
    <description>This is the end time of the stop</description>
    <label>End DateTime</label>
    <type>DateTime</type>
</CustomField>