force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__IsEndLocation__c.field-meta.xml
<CustomField>
    <fullName>maps__IsEndLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End Location</label>
    <type>Checkbox</type>
</CustomField>