force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__isLocked__c.field-meta.xml
<CustomField>
    <fullName>maps__isLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>