force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__IsModified__c.field-meta.xml
<CustomField>
    <fullName>maps__IsModified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This lets us know if the waypoint was edited from core</description>
    <label>Modified from Core</label>
    <type>Checkbox</type>
</CustomField>