force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__LatLong__c.field-meta.xml
<CustomField>
    <fullName>maps__LatLong__c</fullName>
    <description>This is the lat/long of the stop</description>
    <label>Lat/Long</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>