force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__Options__c.field-meta.xml
<CustomField>
    <fullName>maps__Options__c</fullName>
    <description>This is a json object of options being passed around in Core</description>
    <label>Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>