force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__RelatedAdvRouteTemplate__c.field-meta.xml
<CustomField>
    <fullName>maps__RelatedAdvRouteTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Advanced Route Template</label>
    <referenceTo>maps__AdvRouteTemplate__c</referenceTo>
    <relationshipLabel>Maps Advanced Route Waypoints</relationshipLabel>
    <relationshipName>AdvRouteWaypoints</relationshipName>
    <type>Lookup</type>
</CustomField>