force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__RoutedObjectId__c.field-meta.xml
<CustomField>
    <fullName>maps__RoutedObjectId__c</fullName>
    <description>This is the id of the routed object</description>
    <label>Routed Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>