force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__RouteJobId__c.field-meta.xml
<CustomField>
    <fullName>maps__RouteJobId__c</fullName>
    <description>This is the job id that produced the waypoint</description>
    <label>Route Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>