force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__RW_Account__c.field-meta.xml
<CustomField>
    <fullName>maps__RW_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the default lookup to associate the Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AdvRouteWaypoints</relationshipName>
    <type>Lookup</type>
</CustomField>