force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__RW_Case__c.field-meta.xml
<CustomField>
    <fullName>maps__RW_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the default lookup to associate the Case</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>AdvRouteWaypoints</relationshipName>
    <type>Lookup</type>
</CustomField>