force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__RW_Lead__c.field-meta.xml
<CustomField>
    <fullName>maps__RW_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the default lookup to associate the Lead</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>AdvRouteWaypoints</relationshipName>
    <type>Lookup</type>
</CustomField>