force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__RW_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>maps__RW_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the default lookup to associate the Opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>AdvRouteWaypoints</relationshipName>
    <type>Lookup</type>
</CustomField>