force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__SavedQueryId__c.field-meta.xml
<CustomField>
    <fullName>maps__SavedQueryId__c</fullName>
    <description>This will be the id of the related Saved Query record for Maps</description>
    <formula>IF(maps__RoutedObjectId__c == null,
null,
IF(maps__AdvRouteDataSet__c != null,
maps__AdvRouteDataSet__r.maps__SavedQueryId__c,
IF(maps__RelatedAdvRouteTemplate__c == null,
maps__AdvRoute__r.maps__AdvRouteTemplateUser__r.maps__AdvRouteTemplate__r.maps__SavedQueryId__c,
maps__RelatedAdvRouteTemplate__r.maps__SavedQueryId__c)))</formula>
    <label>Saved Query Id</label>
    <type>Text</type>
</CustomField>