force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__Sequence__c.field-meta.xml
<CustomField>
    <fullName>maps__Sequence__c</fullName>
    <description>This is the sequence order of the stop in the route</description>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>