force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>maps__StartDateTime__c</fullName>
    <description>This is the start time of the stop</description>
    <label>Start DateTime</label>
    <type>DateTime</type>
</CustomField>