force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__StateProvince__c.field-meta.xml
<CustomField>
    <fullName>maps__StateProvince__c</fullName>
    <description>This is the state or province of the stop</description>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>