force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__Street__c.field-meta.xml
<CustomField>
    <fullName>maps__Street__c</fullName>
    <description>This is the street of the stop</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>