force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__TemplateUserId__c.field-meta.xml
<CustomField>
    <fullName>maps__TemplateUserId__c</fullName>
    <formula>maps__AdvRoute__r.maps__AdvRouteTemplateUser__c</formula>
    <label>Template User Id</label>
    <type>Text</type>
</CustomField>