force-app/main/default/objects/maps__AdvRouteWaypoint__c/fields/maps__VisitNumberInFrequency__c.field-meta.xml
<CustomField>
    <fullName>maps__VisitNumberInFrequency__c</fullName>
    <description>This is the visit number in the frequency</description>
    <label>Visit Number in Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>